make inputs finys components, also fix styling on validaiton to not shift layout

--- a/FinysTextInputStyles.css
+++ b/FinysTextInputStyles.css
@@ -42,8 +42,21 @@
     content: "\e4f8";
     font-family: "Phosphor" !important;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     margin-right: 4px;
+}
+
+.k-form-error{
+    display: flex !important;
+    max-height: 1em;
+    align-items: center;
+}
+.k-form-error:not(.k-hidden){
+    visibility: visible;
+
+}
+.k-form-error.k-hidden{
+    visibility: hidden;
 }
 
 
